--- a/css/normalize.css
+++ b/css/normalize.css
@@ -13,7 +13,7 @@ body { margin: 0; font-size: 1em; line-height: 1.4; }
 ::selection { background: #ff6000; color: #fff; text-shadow: none; }
 
 a:visited { color: #10b1b2; }
-a:focus { outline: thin dotted; }
+a:focus { outline: none; }
 a:hover, a:active { outline: 0; }
 abbr[title] { border-bottom: 1px dotted; }
 b, strong { font-weight: bold; }
