--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,10 @@ a {
 	color:#10b1b2;
 
 	-webkit-transition: all 0.5s ease;
-	-moz-transition: all 0.5s ease;
-	-o-transition: all 0.5s ease;
-	-ms-transition: all 0.5s ease;
-	transition: all 0.5s ease;
+	   -moz-transition: all 0.5s ease;
+	     -o-transition: all 0.5s ease;
+	    -ms-transition: all 0.5s ease;
+			transition: all 0.5s ease;
 }
 
 a:hover {
@@ -27,10 +27,10 @@ a:hover {
 .box,
 .box * {
 	-webkit-transition: all 0.2s ease;
-	-moz-transition: all 0.2s ease;
-	-o-transition: all 0.2s ease;
-	-ms-transition: all 0.2s ease;
-	transition: all 0.2s ease;
+	   -moz-transition: all 0.2s ease;
+	     -o-transition: all 0.2s ease;
+		-ms-transition: all 0.2s ease;
+			transition: all 0.2s ease;
 }
 
 /* ==========================================================================
@@ -153,10 +153,10 @@ header {
 	position: absolute;
 
 	-webkit-transform:scale(0.55);
-	-moz-transform:scale(0.55);
-	-o-transform:scale(0.55);
-	-ms-transform:scale(0.55);
-	transform:scale(0.55);
+	   -moz-transform:scale(0.55);
+		 -o-transform:scale(0.55);
+		-ms-transform:scale(0.55);
+			transform:scale(0.55);
 
 	opacity: 0;
 	-moz-opacity: 0;
@@ -222,10 +222,10 @@ header {
 
 .box:hover .icon {
 	-webkit-transform:scale(1);
-	-moz-transform:scale(1);
-	-o-transform:scale(1);
-	-ms-transform:scale(1);
-	transform:scale(1);
+	   -moz-transform:scale(1);
+		 -o-transform:scale(1);
+		-ms-transform:scale(1);
+			transform:scale(1);
 
 	opacity: 1;
 	-moz-opacity: 1;
@@ -239,10 +239,10 @@ header {
 
 .box .icon {
 	-webkit-transition: all 0.5s ease;
-	-moz-transition: all 0.5s ease;
-	-o-transition: all 0.5s ease;
-	-ms-transition: all 0.5s ease;
-	transition: all 0.5s ease;
+	   -moz-transition: all 0.5s ease;
+		 -o-transition: all 0.5s ease;
+		-ms-transition: all 0.5s ease;
+			transition: all 0.5s ease;
 }
 
 /* Button
@@ -255,16 +255,17 @@ header {
 }
 
 .btn {		
-  display: inline-block;
-  outline:none;
-  border-radius:8px;
-  box-shadow:
-    0 8px 0 #284242,
-    0 15px 20px rgba(0,0,0,.35);
-  -webkit-transition: -webkit-box-shadow .2s ease-in-out;
-  -moz-transition: -moz-box-shadow .2s ease-in-out;
-  -o-transition: -o-box-shadow .2s ease-in-out;
-  transition: box-shadow .2s ease-in-out;
+	display: inline-block;
+	outline:none;
+	border-radius:8px;
+	box-shadow:
+	0 8px 0 #284242,
+	0 15px 20px rgba(0,0,0,.35);
+
+	-webkit-transition: -webkit-box-shadow .2s ease-in-out;
+	   -moz-transition: -moz-box-shadow .2s ease-in-out;
+	     -o-transition: -o-box-shadow .2s ease-in-out;
+			transition: box-shadow .2s ease-in-out;
 }
 
 .btn:hover {
@@ -299,10 +300,10 @@ header {
 	filter:
 	progid:DXImageTransform.Microsoft.gradient( startColorstr='#558c8c', endColorstr='#416b6b',GradientType=0 ); 
 
-  -webkit-transition: -webkit-transform .2s ease-in-out;
-  -moz-transition: -moz-transform .2s ease-in-out;
-  -o-transition: -o-transform .2s ease-in-out;
-  transition: transform .2s ease-in-out;
+	-webkit-transition: -webkit-transform .2s ease-in-out;
+	   -moz-transition: -moz-transform .2s ease-in-out;
+		 -o-transition: -o-transform .2s ease-in-out;
+			transition: transform .2s ease-in-out;
 }
 
 .btn:active,
@@ -314,9 +315,9 @@ header {
 .btn:active span,
 .btn.active span {	
 	-webkit-transform: translate(0, 4px);
-	-moz-transform: translate(0, 4px);
-	-o-transform: translate(0, 4px);
-	transform: translate(0, 4px);
+	   -moz-transform: translate(0, 4px);
+		 -o-transform: translate(0, 4px);
+			transform: translate(0, 4px);
 }
 
 /* City
@@ -333,10 +334,13 @@ header {
 	z-index:-3;
 	width:100%;
 	height:100%;
-	display: none;
-	animation:cityMove 20s linear 1s infinite;
+	
 	-webkit-animation:cityMove 20s linear 1s infinite;
-	-moz-animation:cityMove 20s linear 1s infinite;
+	   -moz-animation:cityMove 20s linear 1s infinite;
+	        animation:cityMove 20s linear 1s infinite;
+
+	opacity: 0;
+	filter:alpha(opacity=0);
 }
 
 /* animation city */
