--- a/assets/scss/organisms/variations.scss
+++ b/assets/scss/organisms/variations.scss
@@ -13,6 +13,8 @@
     
     .gray .header .title a,
     .gray .header .subtitle,
+    .gray .title,
+    .gray .subtitle,
     .gray a:hover,
     .gray a:focus { color: $orange; }
 
@@ -23,12 +25,17 @@
 
     .gray .btn { @include button(#333); }
 
+    .gray .post-content,
+    .gray .post { border-color: darken(#333, 7%); }
+
 /*  Brown
     ========================================================================== */
     .brown { background-color: $brown; }
     
     .brown .header .title a,
     .brown .header .subtitle,
+    .brown .title,
+    .brown .subtitle,
     .brown a:hover,
     .brown a:focus { color: darken($yellow, 15%); }
 
@@ -39,12 +46,17 @@
 
     .brown .btn { @include button($brown); }
 
+    .brown .post-content,
+    .brown .post { border-color: darken($brown, 7%); }
+
 /*  Blue
     ========================================================================== */
     .blue { background-color: darken($blue, 35%); }
     
     .blue .header .title a,
     .blue .header .subtitle,
+    .blue .title,
+    .blue .subtitle,
     .blue a:hover,
     .blue a:focus { color: #FF0055; }
 
@@ -54,3 +66,6 @@
     .blue a { color: $blue; }
 
     .blue .btn { @include button(darken($blue, 35%)); }
+
+    .blue .post-content,
+    .blue .post { border-color: darken($blue, 40%); }
