--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 
 {% include head.html %}
 
-<body id="hold" class="{% if page.class %}{{ page.class }}{% endif %} default">
+<body id="hold" class="{% if page.class %}{{ page.class }}{% endif %} dark-gray">
 
     {% include header.html %}
 
