--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,11 +6,14 @@
     <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}" />
 
     <!-- Facebook -->
-    <meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}"/>
-    <meta property="og:title" content="{{ page.title }}{% if page.path contains '_posts' %} - Blog | Raphael Fabeni{% endif %}"/>
-    <meta property="og:site_name" content="Raphael Fabeni"/>
-    <meta property="og:url" content="{{ site.url }}{{ page.url }}"/>
-    <meta property="og:type" content="{% if page.path contains '_posts' %}article{% else %}website{% endif %}"/>
+    <meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}" />
+    <meta property="og:title" content="{{ page.title }}{% if page.path contains '_posts' %} - Blog | Raphael Fabeni{% endif %}" />
+    <meta property="og:site_name" content="Raphael Fabeni" />
+    <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
+    <meta property="og:type" content="{% if page.path contains '_posts' %}article{% else %}website{% endif %}" />
+    <meta property="article:author" content="https://www.facebook.com/raphaelfabeni" />
+    <meta property="article:publisher" content="https://www.facebook.com/raphaelfabeni" />
+    <meta property="og:image" content="{{ site.url }}/build/img/{% if page.image %}posts/{{ page.image }}{% else %}raphael-fabeni.jpg{% endif %}" />
 
     <link rel="canonical" href="{{ site.url }}{{ page.url }}">
     <link rel="icon" href="{{ site.baseurl }}favicon.ico">
