--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,9 +11,11 @@
     <meta property="og:site_name" content="Raphael Fabeni" />
     <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
     <meta property="og:type" content="{% if page.path contains '_posts' %}article{% else %}website{% endif %}" />
+    <meta property="og:image" content="{{ site.url }}/build/img/{% if page.image %}posts/{{ page.image }}{% else %}raphael-fabeni.jpg{% endif %}" />
+    {% if page.path contains '_posts' %}
     <meta property="article:author" content="https://www.facebook.com/raphaelfabeni" />
     <meta property="article:publisher" content="https://www.facebook.com/raphaelfabeni" />
-    <meta property="og:image" content="{{ site.url }}/build/img/{% if page.image %}posts/{{ page.image }}{% else %}raphael-fabeni.jpg{% endif %}" />
+    {% endif %}
 
     <link rel="canonical" href="{{ site.url }}{{ page.url }}">
     <link rel="icon" href="{{ site.baseurl }}favicon.ico">
