--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,7 +18,7 @@
     {% endif %}
 
     <link rel="canonical" href="{{ site.url }}{{ page.url }}">
-    <link rel="icon" href="{{ site.baseurl }}favicon.ico">
+    <link rel="shortcut icon" href="{{ site.baseurl }}favicon.ico" type="image/x-icon" />>
 
     <!-- CSS -->
     <link rel="stylesheet" href="{{ site.baseurl }}build/css/main.min.css">
