--- a/assets/scss/base/variables.scss
+++ b/assets/scss/base/variables.scss
@@ -21,7 +21,9 @@
         $brown: #402519;
         $yellow: #FFFC19;
         $blue: #4bacc6;
+        $navy-blue: #10b1b2;
+        $gray: #222;
 
         $color-default:     #eee;
-        $color-primary:     $purple;
-        $color-secondary:   $pink;
+        $color-primary:     $gray;
+        $color-secondary:   $navy-blue;
