--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,10 +1,14 @@
-<div id="disqus_thread" class="main-disqus"></div>
+<section class="main-disqus">
+    <div id="disqus_thread"></div>
+</section>
 <script type="text/javascript">
-  var disqus_shortname = 'raphaelfabeni';
 
-  (function() {
-      var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-      dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-      (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-  })();
+    var disqus_shortname = 'raphaelfabeni',
+    disqus_url = "http://raphaelfabeni.com.br{{ page.url }}";
+
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
 </script>
