--- a/assets/scss/atoms/grid.scss
+++ b/assets/scss/atoms/grid.scss
@@ -13,11 +13,15 @@
 
     @media only screen {
         .container {
-            padding-left: 10px;
-            padding-right: 10px;
+            padding-left: 20px;
+            padding-right: 20px;
         }
 
-        .main { width: 100%; }
+        .main {
+            width: 100%;
+            padding-left: 20px;
+            padding-right: 20px;
+        }
     }
 
     /*
