--- a/assets/scss/organisms/layout.scss
+++ b/assets/scss/organisms/layout.scss
@@ -196,6 +196,10 @@
             }
             .share-item { float: left; }
             .share-item + .share-item { margin-left: 35px; }
+
+            .share iframe {
+                max-width: none;
+            }
     }
 
 
