--- a/assets/scss/atoms/grid.scss
+++ b/assets/scss/atoms/grid.scss
@@ -22,6 +22,8 @@
             padding-left: 20px;
             padding-right: 20px;
         }
+
+        .projects { padding-bottom: 35px; }
     }
 
     /*
