--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -17,6 +17,7 @@
 
 /*  Organisms
     ========================================================================== */
+    @import "organisms/github";
     @import "organisms/keyframes";
     @import "organisms/layout";
     @import "organisms/variations";
