--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -8,6 +8,10 @@
    <div itemscope="" itemtype="http://data-vocabulary.org/Breadcrumb">
       <span itemprop="title">Blog</span>
    </div>
+   {% elsif page.type == 'Projects' %}
+   <div itemscope="" itemtype="http://data-vocabulary.org/Breadcrumb">
+      <span itemprop="title">Projects</span>
+   </div>
    {% elsif page.type == 'Post' %}
    <div itemscope="" itemtype="http://data-vocabulary.org/Breadcrumb">
       <a href="/blog" itemprop="url">
