--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,8 +20,13 @@
     {% if page.path contains '_posts' %}
     {% include disqus.html %}
     {% endif %}
-
+    
+    {% if page.type == 'Projects' %}
+    <script src="{{ site.baseurl }}build/js/libs/jquery.min.js"></script>
+    <script src="{{ site.baseurl }}build/js/projects.min.js"></script>
+    {% else %}
     <script src="{{ site.baseurl }}build/js/scripts.min.js"></script>
+    {% endif %}
 
 </body>
 </html>
